Fix gray gradient on Safari (#555)
Let's all avoid that @SwenVanZanten  opens other issues

--- a/static/scss/partials/_partners.scss
+++ b/static/scss/partials/_partners.scss
@@ -27,7 +27,7 @@
     left: -20px;
     width: 20px;
     height: 100%;
-    background: linear-gradient(to right, transparent 0, #fff 100%);
+    background: linear-gradient(to right, rgba(255,255,255,0) 0, #fff 100%);
 }
 
 /* expanded state */
